--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,6 +9,13 @@
             "name": "Launch Main",
             "request": "launch",
             "mainClass": "src.Main",
+            "projectName": "Java_Physics_Demos_2618af9"
+        },
+        {
+            "type": "java",
+            "name": "Launch Main",
+            "request": "launch",
+            "mainClass": "src.Main",
             "projectName": "Java_Physics_Demos_c19563c2"
         }
     ]
